project/dropbox/main/default/objects/DropBoxFile__c/DropBoxFile__c.object-meta.xml
<CustomObject>
    <label>DropBox File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DropBox Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>