project/dropbox/main/default/objects/DropBoxFile__c/fields/Dropbox_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_File_Id__c</fullName>
    <description>The unique ID of the file in Dropbox</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique ID of the file in Dropbox</inlineHelpText>
    <label>Dropbox File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>