project/dropbox/main/default/objects/DropBoxFile__c/fields/Dropbox_Path__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Path__c</fullName>
    <inlineHelpText>The full path of the file in Dropbox</inlineHelpText>
    <label>Dropbox Path</label>
    <type>Url</type>
</CustomField>