project/dropbox/main/default/objects/DropBoxFile__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <label>File Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>