project/dropbox/main/default/objects/DropBoxFile__c/fields/FileExtension__c.field-meta.xml
<CustomField>
    <fullName>FileExtension__c</fullName>
    <label>FileExtension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>