project/dropbox/main/default/objects/DropBoxFile__c/fields/Is_Folder__c.field-meta.xml
<CustomField>
    <fullName>Is_Folder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Folder</label>
    <type>Checkbox</type>
</CustomField>