project/dropbox/main/default/objects/DropBoxFile__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ RecordId__c , &apos;Parent Record&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentId</label>
    <type>Text</type>
</CustomField>