project/dropbox/main/default/objects/DropBoxFile__c/fields/ServerUrl__c.field-meta.xml
<CustomField>
    <fullName>ServerUrl__c</fullName>
    <label>ServerUrl</label>
    <type>Url</type>
</CustomField>