project/dropbox/main/default/objects/DropBoxFile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FileExtension__c</columns>
    <columns>ServerUrl__c</columns>
    <columns>ParentId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>